@@ -1119,3 +1119,60 @@ div#loading img {
 select#task_user, select#select_contacts {
 	width: 150px;
 }
+
+/* Autocomplete styles */
+.ac_results {
+	padding: 0px;
+	border: 1px solid black;
+	background-color: white;
+	overflow: hidden;
+	z-index: 99999;
+}
+
+.ac_results ul {
+	width: 100%;
+	list-style-position: outside;
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	text-align: left;
+}
+
+.ac_results li {
+	margin: 0px;
+	padding: 2px 5px;
+	cursor: default;
+	display: block;
+	/* 
+	if width will be 100% horizontal scrollbar will apear 
+	when scroll mode will be used
+	*/
+	/*width: 100%;*/
+	font: menu;
+	font-size: 12px;
+	/* 
+	it is very important, if line-height not setted or setted 
+	in relative units scroll will be broken in firefox
+	*/
+	line-height: 16px;
+}
+
+.ac_loading {
+	background: white url('../images/loading.gif') right center no-repeat;
+}
+
+.ac_over {
+	background-color: #efefef;
+}
+span.ac_extra_field,
+span.ac_extra_field strong {
+	font-style: italic;
+	font-size: 9px;
+}
+.ac_input {
+	background-image: url("/pandora_console/images/group.png"); 
+	background-repeat: no-repeat;
+	background-attachment: scroll; 
+	background-position: right center; 
+	-moz-background-size: auto auto;
+}
