@@ -21,6 +21,40 @@ global $config;
 
 check_login ();
 
+if (defined ('AJAX')) {
+
+	global $config;
+
+	$search_users = (bool) get_parameter ('search_users');
+	
+	if ($search_users) {
+		require_once ('include/functions_db.php');
+		
+		//$id_user = (int) get_parameter ('id_user'); //¿?
+		$id_user = $config['id_user'];
+		$string = (string) get_parameter ('q'); /* q is what autocomplete plugin gives */
+		
+		$filter = array ();
+		
+		$filter[] = '(nombre COLLATE utf8_general_ci LIKE "%'.$string.'%" OR direccion LIKE "%'.$string.'%" OR comentarios LIKE "%'.$string.'%")';
+
+		$filter[] = 'id_usuario != '.$id_user;
+		
+		$users = get_user_visible_users ($config['id_user'],"IR", false);
+		if ($users === false)
+			return;
+		
+		foreach ($users as $user) {
+			echo $user['id_usuario'] . "|" . $user['nombre_real']  . "\n";
+		}
+		
+		return;
+ 	}
+	return;
+}
+
+require_once ('include/functions_db.php');
+
 // Get main variables and init
 $id_task = get_parameter ("id_task", -1);
 // id_task = -1 is for project people management, different than people task management
@@ -258,9 +292,11 @@ if ($id_task != -1){
 	echo combo_roles ();
 
 	echo "<td valign='top' class='datos2'>";
-	echo __('User');
-	echo "<td valign='top' class='datos2'>";
-	combo_user_visible_for_me ($config["id_user"], "user", 0, "PR", false, false, false, true);
+	echo __('User  ');
+	$src_code = print_image('images/group.png', true, false, true);
+	echo print_input_text_extended ('id_user', '', 'text-id_user', '', 20, 100, false, '',
+			array('style' => 'background: url(' . $src_code . ') no-repeat right;'), true, '','')
+		. print_help_tip (__("Type at least two characters to search"), true);
 	echo "</table>";
 		
 	echo "<table class='button' width=500>";
@@ -301,6 +337,36 @@ while ($row=mysql_fetch_array($result)){
 }
 echo "</table></div>";
 
-
-
 ?>
+
+<script type="text/javascript" src="include/js/jquery.autocomplete.js"></script>
+
+
+<script type="text/javascript" >
+$(document).ready (function () {
+	$("#textarea-description").TextAreaResizer ();
+
+	$("#text-id_user").autocomplete ("ajax.php",
+		{
+			scroll: true,
+			minChars: 2,
+			extraParams: {
+				page: "operation/projects/people_manager",
+				search_users: 1,
+				id_user: "<?php echo $config['id_user'] ?>"
+			},
+			formatItem: function (data, i, total) {
+				if (total == 0)
+					$("#text-id_user").css ('background-color', '#cc0000');
+				else
+					$("#text-id_user").css ('background-color', '');
+				if (data == "")
+					return false;
+				return data[0]+'<br><span class="ac_extra_field"><?php echo __(" ") ?>: '+data[1]+'</span>';
+			},
+			delay: 200
+
+		});
+});
+
+</script>
